# tetris20g-ai

./: 0.bootstrap.js  Cargo.toml  README.md  bootstrap.js  learn.py
backend/src/: core.rs  display.rs  lib.rs  logger.rs  regressor.rs  utility.rs
cli/: Cargo.toml
cli/src/: display.rs  lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
frontend/www/: index.html  index.js  package-lock.json  package.json
frontend/www/static/: weights__1.txt
src/: agent.rs  core.rs  dataset_generator.rs  display.rs  enumeration.rs  human_manipulation.rs  lib.rs  logger.rs  main.rs  regressor.rs  utility.rs
tetris20g_ai/: Cargo.toml
tetris20g_ai/src/: agent.rs  enumeration.rs  lib.rs  regressor.rs
