[package]
name = "tetris20g_ai"
version = "0.1.0"
authors = ["Mitsuru Kusumoto <kusumoto.mitsuru@gmail.com>"]

[lib]
name = "tetris20g_ai"
path = "src/lib.rs"

[dependencies]
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
structopt = "0.1.0"
structopt-derive = "0.1.0"

[profile.release]
opt-level = 3
